Delete confirm polish

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -2,8 +2,10 @@
   "View": "查看",
   "Download": "下载",
   "Delete": "删除",
-  "DeleteConfirmMessage": "你确定要删除 ",
-  "DeleteConfirmSubMessage": "此操作无法撤销，与此相关的所有数据将被删除。",
+  "DeleteCaseConfirmMessage": "你确定要删除案件 ",
+  "DeleteCaseConfirmSubMessage": "此操作无法撤销，与此案件相关的所有数据将被删除。",
+  "DeleteDocConfirmMessage": "你确定要删除以下文件吗？",
+  "DeleteDocConfirmSubMessage": "此操作无法撤销，文件将被永久删除。",
   "Send for Signature": "发送签字",
   "File Name": "文件名称",
   "File Type": "文件类型",
@@ -17,6 +19,7 @@
   "Generate Documents": "生成文件",
   "UploadDocument": "上传文件",
   "CaseDocument": "附属文件",
+  "CaseId": "案件编号",
   "Category": "文件分类",
   "Uploader": "上传者",
   "UploadedAt": "上传时间",
