--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,8 +2,10 @@
   "View": "View",
   "Download": "Download",
   "Delete": "Delete",
-  "DeleteConfirmMessage": "Are you sure you want to delete ",
-  "DeleteConfirmSubMessage": "This action cannot be undone, all data associated with it will be deleted.",
+  "DeleteCaseConfirmMessage": "Are you sure you want to delete Case: ",
+  "DeleteCaseConfirmSubMessage": "This action cannot be undone, all data associated with this case will be deleted.",
+  "DeleteDocConfirmMessage": "Are you sure you want to delete document: ",
+  "DeleteDocConfirmSubMessage": "This action cannot be undone, the document will be removed permanently.",
   "Send for Signature": "Send for Signature",
   "File Name": "File Name",
   "File Type": "File Type",
@@ -17,6 +19,7 @@
   "Generate Documents": "Generate Documents",
   "UploadDocument": "Upload Document",
   "CaseDocument": "Case Document",
+  "CaseId": "Case ID",
   "Category": "Category",
   "Uploader": "Uploader",
   "UploadedAt": "Uploaded At",
