Add case name to createNewCase

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -2,7 +2,7 @@
   "View": "查看",
   "Download": "下载",
   "Delete": "删除",
-  "DeleteCaseConfirmMessage": "你确定要删除案件 ",
+  "DeleteCaseConfirmMessage": "你确定要删除案件:",
   "DeleteCaseConfirmSubMessage": "此操作无法撤销，与此案件相关的所有数据将被删除。",
   "DeleteDocConfirmMessage": "你确定要删除以下文件吗？",
   "DeleteDocConfirmSubMessage": "此操作无法撤销，文件将被永久删除。",
@@ -151,7 +151,7 @@
   "NewCase": "新建案件",
   "CreateNewCaseForCustomer": "为客户新建账户与案件",
   "ApplicantName": "用户姓名",
-  "CaseNickName": "案件昵称",
+  "CaseName": "案件名称",
   "CaseNumber": "案件编号",
   "DownloadFile": "下载文件",
   "Send": "邮箱发送",
