--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,7 +2,7 @@
   "View": "View",
   "Download": "Download",
   "Delete": "Delete",
-  "DeleteCaseConfirmMessage": "Are you sure you want to delete Case: ",
+  "DeleteCaseConfirmMessage": "Are you sure you want to delete Case:",
   "DeleteCaseConfirmSubMessage": "This action cannot be undone, all data associated with this case will be deleted.",
   "DeleteDocConfirmMessage": "Are you sure you want to delete document: ",
   "DeleteDocConfirmSubMessage": "This action cannot be undone, the document will be removed permanently.",
@@ -149,7 +149,7 @@
   "NewCase": "New Case",
   "CreateNewCaseForCustomer": "Create a new case and account for customer",
   "ApplicantName": "Applicant Name",
-  "CaseNickName": "Case Nickname",
+  "CaseName": "Case Name",
   "CaseNumber": "Case Number",
   "DownloadFile": "DownloadFile",
   "Send": "Send",
