Delete modal UI fix

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -2,9 +2,9 @@
   "View": "查看",
   "Download": "下载",
   "Delete": "删除",
-  "DeleteCaseConfirmMessage": "你确定要删除案件:",
+  "DeleteCaseConfirmMessage": "你确定要删除案件 ",
   "DeleteCaseConfirmSubMessage": "此操作无法撤销，与此案件相关的所有数据将被删除。",
-  "DeleteDocConfirmMessage": "你确定要删除以下文件吗？",
+  "DeleteDocConfirmMessage": "你确定要删除以下文件 ",
   "DeleteDocConfirmSubMessage": "此操作无法撤销，文件将被永久删除。",
   "Send for Signature": "发送签字",
   "File Name": "文件名称",
