--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,9 +2,9 @@
   "View": "View",
   "Download": "Download",
   "Delete": "Delete",
-  "DeleteCaseConfirmMessage": "Are you sure you want to delete Case:",
+  "DeleteCaseConfirmMessage": "Are you sure you want to delete ",
   "DeleteCaseConfirmSubMessage": "This action cannot be undone, all data associated with this case will be deleted.",
-  "DeleteDocConfirmMessage": "Are you sure you want to delete this? ",
+  "DeleteDocConfirmMessage": "Are you sure you want to delete ",
   "DeleteDocConfirmSubMessage": "This action cannot be undone, the document will be removed permanently.",
   "Send for Signature": "Send for Signature",
   "File Name": "File Name",
