--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -132,6 +132,7 @@
     "CreateNewApplication": "New Application"
   },
 
+  "FindIncomplete": "Find Incomplete",
   "CompleteForm": "Complete Form",
 
   "ImmigrationType": "Immigration Type",
