Refine UI improve

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -23,7 +23,7 @@
   "Category": "Category",
   "Uploader": "Uploader",
   "UploadedAt": "Uploaded At",
-  "RefineWithAI": "Refine with AI",
+  "RefineWithAI": "Improve with AI",
   "Use": "Use",
   "Rewrite": "Rewrite",
   "Discard": "Discard",
