Don't show the refresh token modal when user is signed in.

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -39,6 +39,11 @@
   "Compare": "比较",
   "Login": "登录",
   "SignUp": "注册",
+  "Doesn't have account?": "注册新用户",
+  "Contact contact@quickimmi.ai to sign up": "注册请联系 Email: contact@quickimmi.ai",
+  "Refresh": "刷新",
+  "Renew session": "保持登陆",
+  "Stay Logged In? Your session will end soon. Refresh now to continue without interruption.": "您的会话即将结束，立即刷新以继续保持登陆状态。",
   "LoginAdsTitle": "智享移民新体验",
   "LoginAdsContent": "Quickimmi运用先进的人工智能技术，提供个性化的移民指南，高效且精确地处理繁杂文件，并进行清晰的任务管理和实时案件跟踪。摆脱繁琐流程，专注重要事务。AI驱动的解决方案提高准确性和效率，让移民过程更轻松。选择Quickimmi，体验AI赋能的智能服务。立即开启您的智能移民体验！",
   "ForgotPassword": "忘记密码",
