--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -39,6 +39,11 @@
   "Compare": "Compare",
   "Login": "Log in",
   "SignUp": "Sign up",
+  "Doesn't have account?": "Doesn't have account?",
+  "Contact contact@quickimmi.ai to sign up": "Email contact@quickimmi.ai to sign up.",
+  "Refresh": "Refresh",
+  "Renew session": "Renew session",
+  "Stay Logged In? Your session will end soon. Refresh now to continue without interruption.": "Stay Logged In? Your session will end soon. Refresh now to continue without interruption.",
   "ForgotPassword": "Forgot password",
   "SignOut": "Sign out",
   "LoginAdsTitle": "Streamline Your Immigration Experience",
