--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -156,6 +156,9 @@
   "DRAFT": "Draft",
   "REVIEW": "Review",
   "SUBMIT": "Submit",
+  "Completion": "Completion",
+  "LawyerReview": "Under Lawyer Review",
+  "TranslateToOriginalLanguage": "Translate to Original Language",
 
   "Asylum": "Asylum",
   "AFFIRMATIVE": "Affirmative",
