case card css adjust.

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -307,6 +307,7 @@
   "OtherFluentLanguages": "添加另一种你能流利说的语言",
 
   "UploadSpousePassportOrOtherID": "上传配偶的护照或其他身份证明",
+  "Change document": "替换上传文件",
   "SpouseIsInUS": "配偶是否在美国?",
   "SpousePartnerApplication": "配偶/伴侣申请",
   "Male": "男",
