--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -310,6 +310,7 @@
   "OtherFluentLanguages": "Add another language you speak fluently",
 
   "UploadSpousePassportOrOtherID": "Upload spouse's passport or other identity document",
+  "Change document": "Change document",
   "SpouseIsInUS": "Is this person in the U.S.?",
   "SpousePartnerApplication": "Spouse/Partner Application",
   "Male": "Male",
