Case progress document implementation, ui improve

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -201,22 +201,30 @@
   "lawyerReviewMessage": "Case information has been filled in. Please review and generate the application documents as soon as possible.",
   "reviewButtonText": "Review",
   "clientSignatureMessage": "Please download the application documents and notify the client to sign.",
+  "clientSignaturePostMessage": "Client signed document has been uploaded.",
   "downloadSignatureDocsButtonText": "Download documents to be signed",
   "uploadSignedDocsButtonText": "Upload signed documents",
+  "updateSignedDocsButtonText": "Update signed documents",
   "submitApplicationMessage": "The client has completed the signing. Please prepare the application materials for submission as soon as possible.",
+  "submitApplicationPostMessage": "The application has been submitted.",
   "downloadSignedDocsButtonText": "Download Signed Document",
   "registerTrackingNumberButtonText": "Register tracking number",
+  "changeTrackingInfoButtonText": "Change tracking info",
   "noticeReceiptMessage": "Waiting for the immigration office to send the receipt.",
+  "noticeReceiptPostMessage": "The immigration office receipt has been uploaded",
   "registerReceiptButtonText": "Register receipt",
   "waitingFingerprintCollectionMessage": "Waiting for the immigration court to notify the biometric collection time.",
+  "waitingFingerprintCollectionPostMessage": "The biometric collection time has been registered.",
   "registerFingerprintTimeLocationButtonText": "Register fingerprint collection time and location",
   "fingerprintCollectionMessage": "Time: {time}, Location: {location}, Note: {note}",
   "viewReceiptButtonText": "View receipt",
   "changeTimeLocationButtonText": "Change time and location",
   "waitingInterviewMessage": "Waiting for the immigration court to notify the interview time.",
+  "waitingInterviewPostMessage": "The interview time has been registered.",
   "registerInterviewTimeLocationButtonText": "Register interview time and location",
   "interviewMessage": "Time: {time}, Location: {location}, Note: {note}",
   "finalReviewMessage": "Waiting for the immigration court to complete the final review.",
+  "finalReviewPostMessage": "The final review has been completed.",
   "resultMessage": "The client's application has been successfully approved, and the case is closed.",
   "cannotUpdateThisStepTooltip": "You can only update the step which is in progress.",
   "stepCompletedTooltip": "This step is completed and cannot be updated.",
