--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -27,6 +27,10 @@
   "RefineWithAI": "Improve with AI",
   "Use": "Use",
   "Rewrite": "Rewrite",
+  "Write your Personal Statement with AI": "Write your Personal Statement with AI",
+  "Please complete the previous sections before using this feature": "Please complete the previous sections before using this feature",
+  "Translate the PS on the left panel into Original Language.": "Translate the PS on the left panel into Original Language.",
+  "AI will generate the Personal Statement based on the information provided in the previous sections.": "AI will generate the Personal Statement based on the information provided in the previous sections.",
   "Discard": "Discard",
 
   "Home": "Home",
