--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -440,6 +440,7 @@
   "JudgeName": "Judge Name",
   "HearingTime": "Hearing Time",
   "HearingTimeFormat": "HH:MM AM/PM",
+  "NoticeOfAppearDate": "Notice Of Appear Date",
   "UploadI94Document": "Upload I-94 Document",
   "WhenLastLeaveCountry": "When did you last leave your country?",
   "DateStatusExpires": "When does the status of your last entry expire?",
