add translation for MASTER_CALENDAR_HEARING and INDIVIDUAL_HEARING.

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -193,7 +193,9 @@
   "REVIEW_AND_SIGN": "审查签署",
   "SUBMIT_APPLICATION": "递交申请",
   "FINGERPRINT_INTERVIEW": "指纹面谈",
-  "FINAL_RESULT": "出局结果",
+  "MASTER_CALENDAR_HEARING": "主排期听证",
+  "INDIVIDUAL_HEARING": "个人听证会",
+  "FINAL_RESULT": "最终结果",
   "FILLING_DETAILS": "填写资料",
   "LAWYER_REVIEW": "律师审核",
   "CLIENT_SIGNATURE": "客户签字",
