--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -191,6 +191,8 @@
   "REVIEW_AND_SIGN": "Review and Sign",
   "SUBMIT_APPLICATION": "Submit",
   "FINGERPRINT_INTERVIEW": "Fingerprint and Interview",
+  "MASTER_CALENDAR_HEARING": "Master Calendar Hearing",
+  "INDIVIDUAL_HEARING": "Individual Hearing",
   "FINAL_RESULT": "Result",
   "FILLING_DETAILS": "Filling Details",
   "LAWYER_REVIEW": "Lawyer Review",
