draft lawyer profile page

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -55,6 +55,7 @@
   "SignOut": "退出",
   "ReturnToDashboard": "返回仪表盘",
   "ReturnTocCaseSummaryPage": "查看案件进展",
+  "Profile": "个人信息",
   "LandingPage": {
     "BrandText": "AI助力，快速移民，轻松实现美国梦",
     "Lawyer": "律师",
