--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -55,6 +55,7 @@
   "LoginAdsContent": "QuickImmi optimizes your immigration process with AI-driven solutions. Our platform efficiently and accurately handles complex documents, provides personalized immigration guidance, and ensures clear task management with real-time case tracking. Experience a seamless immigration transformation powered by AI.",
   "ReturnToDashboard": "Return to Dashboard",
   "ReturnTocCaseSummaryPage": "Return to Case Summary",
+  "Profile": "Profile",
   "LandingPage": {
     "BrandText": "Fast-Track Your American Dream with AI",
     "Lawyer": "Lawyer",
