Fix the asylum question 2A and 2B

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -462,9 +462,9 @@
   "ExplainAfraidOfBeingTorturedWhenReturned": "如果是\"是\"，请解释您为什么担心以及您所担心的酷刑的性质、由谁实施以及为什么会实施。",
   "AppliedRefugeeOrAsylumBefore": "您、您的配偶、您的子女、您的父母或您的兄弟姐妹是否曾向美国政府申请过难民身份、庇护或暂缓遣返？",
   "ExplainAppliedRefugeeOrAsylumBefore": "如果是\"是\"，请解释决定以及您、您的配偶、您的子女、您的父母或您的兄弟姐妹作为该决定结果而获得的任何身份的情况。请说明您是否包含在父母或配偶的申请中。如果是，请在回答中包括您父母或配偶的A号码。如果您曾被移民法官或移民局上诉委员会拒绝庇护，请描述自拒绝日期以来您所在国家的情况或您个人情况的任何变化，这可能会影响您的庇护资格。",
-  "TravelOtherCountryBeforeUS": "在离开您声称庇护的国家后，您或您现在在美国的配偶或子女是否曾经在其他国家旅行或居住过？",
-  "AnyLawfulStatusAnyCountry": "您、您的配偶、您的子女或其他家庭成员（例如父母或兄弟姐妹）是否曾在除您现在声称庇护的国家以外的任何国家申请或获得过任何合法身份？",
-  "ExplainAnyLawfulStatusAnyCountry": "如果对问题2A和/或2B的答案是\"是\"，请为每个人提供以下信息：每个国家的名称和停留时间、该人在那里的身份、离开的原因、该人是否有权返回以进行合法居住、该人是否在那里申请了难民身份或庇护，如果没有，请说明他或她为什么没有这样做。",
+  "TravelOtherCountryBeforeUS": "A. 在离开您声称庇护的国家后，您或您现在在美国的配偶或子女是否曾经在其他国家旅行或居住过？",
+  "AnyLawfulStatusAnyCountry": "B. 您、您的配偶、您的子女或其他家庭成员（例如父母或兄弟姐妹）是否曾在除您现在声称庇护的国家以外的任何国家申请或获得过任何合法身份？",
+  "ExplainAnyLawfulStatusAnyCountry": "如果对问题A和/或B的答案是\"是\"，请为每个人提供以下信息：每个国家的名称和停留时间、该人在那里的身份、离开的原因、该人是否有权返回以进行合法居住、该人是否在那里申请了难民身份或庇护，如果没有，请说明他或她为什么没有这样做。",
   "HaveHarmedOthers": "您、您的配偶或您的子女是否曾因种族、宗教、国籍、特定社会群体成员身份或特定政治观点的信仰而命令、煽动、协助或以其他方式参与对任何人造成伤害或痛苦？",
   "ExplainHaveHarmedOthers": "如果是\"是\"，请详细描述每个事件以及您、您配偶或您的子女的参与程度。",
   "ReturnCountryAfterBeingHarmed": "在您离开受到伤害或担心受到伤害的国家后，您是否返回过该国家？",
