Add month year picker control

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -299,6 +299,7 @@
   "NamesUsedBefore": "添加一个曾用名",
 
   "MM/DD/YYYY": "MM/DD/YYYY",
+  "MM/YYYY": "MM/YYYY",
   "IDExpirationDate": "证件到期日期",
   "PassportIssueCountryLabel": "证件签发国家",
   "PassportIssueCountry": "证件签发国家",
