--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -319,7 +319,7 @@
 
   "Language": "语言",
   "NativeLanguage": "母语",
-  "FluentInEnglish": "你可以流利地说英语吗？",
+  "FluentInEnglish": "我可以流利地说英语。",
   "OtherFluentLanguagesLabel": "其他流利语言",
   "OtherFluentLanguages": "添加另一种你能流利说的语言",
 
