--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -322,7 +322,7 @@
 
   "Language": "Language",
   "NativeLanguage": "Native Language",
-  "FluentInEnglish": "Are you fluent in English?",
+  "FluentInEnglish": "I am fluent in English?",
   "OtherFluentLanguagesLabel": "Other Fluent Languages",
   "OtherFluentLanguages": "Add another language you speak fluently",
 
