--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -385,6 +385,10 @@
 
   "TelephoneNumberInUs": "Telephone Number in the U.S.",
   "PhoneNumberFormat": "(Area code)-XXX-XXXX",
+  "phoneNumber": "Phone Number",
+  "daytimeTelephoneNumber": "Daytime Telephone Number",
+  "mobileTelephoneNumber": "Mobile Telephone Number",
+  "faxNumber": "Fax Number",
   "ResidentialAddressInUs": "Residential Address in the U.S.",
   "Street": "Street",
   "ApartmentNumber": "Apartment Number",
@@ -426,6 +430,7 @@
 
   "AlienRegistrationNumber": "Alien Registration Number (A-Number)",
   "UscisOnlineAccountNumber": "USCIS Online Account Number",
+  "eoirNumber": "EOIR Number",
   "I94Number": "I-94 Number",
   "SSN": "Social Security Number",
   "ImmigrationCourt": "Immigration Court",
@@ -504,6 +509,13 @@
   "G28FormAttached": "Select this box if Form G-28 is attached.",
   "AttorneyStateBarNumber": "Attorney State Bar Number (if applicable)",
   "AttorneyStateBarNumberPlaceholder": "Attorney State Bar Number",
+  "licensingAuthority": "Licensing Authority",
+  "dateofAccreditation": "Date of Accreditation",
+  "Eligibility": "Eligibility",
+  "AccountNumbers": "Account Numbers",
+  "lawFirm": "Law Firm",
+  "specialization": "Specialization",
+  "experienceYears": "Experience Years",
   "AttorneyUscisOnlineAccountNumber": "Attorney or Accredited Representative USCIS Online Account Number (if any)",
   "AttorneyUscisOnlineAccountNumberPlaceholder": "USCIS Online Account Number",
   "Next": "Next",
