Change the component for entry record

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -776,5 +776,36 @@
     "Undergraduate Schools",
     "Graduate Schools",
     "Professional Schools"
+  ],
+  "EntryRecordStatus": [
+    "N/A",
+    "B1/B2 VISA",
+    "VWP",
+    "F1 VISA",
+    "M1 VISA",
+    "H1B VISA",
+    "L1 VISA",
+    "O1 VISA",
+    "J1 VISA",
+    "C VISA",
+    "A VISA",
+    "G VISA",
+    "TPS",
+    "REFUGEE",
+    "ASYLUM GRANTED",
+    "GREEN CARD",
+    "ESTA AUTHORIZATION",
+    "K1 VISA",
+    "R1 VISA",
+    "E2 VISA",
+    "E3 VISA",
+    "TN VISA",
+    "P VISA",
+    "Q VISA",
+    "I VISA",
+    "ADJUSTMENT OF STATUS",
+    "VISA EXTENSION",
+    "CHANGE OF STATUS",
+    "OTHER"
   ]
 }
