--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -774,6 +774,37 @@
     "研究生院",
     "专业学校"
   ],
+  "EntryRecordStatus": [
+    "N/A",
+    "B1/B2 VISA",
+    "VWP",
+    "F1 VISA",
+    "M1 VISA",
+    "H1B VISA",
+    "L1 VISA",
+    "O1 VISA",
+    "J1 VISA",
+    "C VISA",
+    "A VISA",
+    "G VISA",
+    "TPS",
+    "REFUGEE",
+    "ASYLUM GRANTED",
+    "GREEN CARD",
+    "ESTA AUTHORIZATION",
+    "K1 VISA",
+    "R1 VISA",
+    "E2 VISA",
+    "E3 VISA",
+    "TN VISA",
+    "P VISA",
+    "Q VISA",
+    "I VISA",
+    "ADJUSTMENT OF STATUS",
+    "VISA EXTENSION",
+    "CHANGE OF STATUS",
+    "OTHER"
+  ],
   "CaseStatusMenuOverview": "简介",
   "CaseStatusMenuDocuments": "相关文件",
   "CaseStatusMenuApplicationForm": "申请表格"
