--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -236,6 +236,7 @@
   "resultMessage": "The client's application has been successfully approved, and the case is closed.",
   "cannotUpdateThisStepTooltip": "You can only update the step which is in progress.",
   "stepCompletedTooltip": "This step is completed and cannot be updated.",
+  "stepNotStartedTooltip": "This step has not started yet.",
   "Please provide complete and accurate application information": "Please provide complete and accurate application information",
   "Go Complete": "Go Complete",
   "UploadSignedDocument": "Upload Signed Document",
