Add entry record to notice of appear section

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -432,6 +432,7 @@
   "AddressBeforeUS": "请列出您来到美国之前居住的最后一个地址。如果这不是您担心迫害的国家，请同时列出您担心迫害的国家的最后一个地址。",
 
   "AlienRegistrationNumber": "外国人注册号码 (A-Number)",
+  "AlienRegistrationNumberFormat": "9-数字",
   "UscisOnlineAccountNumber": "美国公民及移民服务局在线账户号码",
   "eoirNumber": "移民法庭号码",
   "I94Number": "I-94 号码",
@@ -453,7 +454,7 @@
   "UploadI94Document": "上传I-94文件",
   "WhenLastLeaveCountry": "您上次离开您的国家是什么时候？",
   "DateStatusExpires": "您最后一次入境的身份何时到期？",
-  "EntryRecordsDescription": "列出每次进入美国的记录，从最近的记录开始。对于每次进入，列出日期（mm/dd/yyyy）、地点和您的身份。（如有需要，请附加额外的表格。）",
+  "EntryRecordsDescription": "列出每次进入美国的记录，从最近的记录开始。",
   "EntryRecords": "入境记录",
   "Date": "日期",
   "Place": "地点",
