--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -435,6 +435,7 @@
   "AddressBeforeUS": "List your last address where you lived before coming to the United States. If this is not the country where you fear persecution, also list the last address in the country where you fear persecution.",
 
   "AlienRegistrationNumber": "Alien Registration Number (A-Number)",
+  "AlienRegistrationNumberFormat": "9-digit number",
   "UscisOnlineAccountNumber": "USCIS Online Account Number",
   "eoirNumber": "EOIR Number",
   "I94Number": "I-94 Number",
@@ -450,13 +451,13 @@
   "NoticeOfAppearance": "Notice Of Appearance",
   "HearingCourtAddress": "Hearing Court Address",
   "JudgeName": "Judge Name",
-  "HearingTime": "Hearing Time",
+  "HearingTime": "Hearing Date & Time",
   "HearingTimeFormat": "HH:MM AM/PM",
   "NoticeOfAppearDate": "Notice Of Appear Date",
   "UploadI94Document": "Upload I-94 Document",
   "WhenLastLeaveCountry": "When did you last leave your country?",
   "DateStatusExpires": "When does the status of your last entry expire?",
-  "EntryRecordsDescription": "List each entry into the U.S. beginning with your most recent entry. List date (mm/dd/yyyy), place, and your status for each entry. (Attach additional sheets as needed.)",
+  "EntryRecordsDescription": "List each entry into the U.S. beginning with your most recent entry.",
   "EntryRecords": "Entry Records",
   "Date": "Date",
   "Place": "Place",
