--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -187,6 +187,8 @@
   "EnterClientEmail": "Enter client email address",
   "InputFileNameToSearch": "Enter file name to search",
 
+  "ApplicantInformation": "Applicant Information",
+  "ApplicationDetails": "Application Detail",
   "CaseProgressTitle": "Progress",
   "FILLING_APPLICATION": "Collect Information",
   "REVIEW_AND_SIGN": "Review and Sign",
@@ -285,6 +287,7 @@
   "ViewMergedDocuments": "View Merged Documents",
   "PersonalStatement": "Personal Statement",
   "PersonalStatementInOriginalLanguage": "Personal Statement in Original Language",
+  "ViewFormSummary": "View Form Summary",
   "DisableDocDeleteButtonText": "System generated documents can't be deleted",
 
   "IdNumber": "ID Number",
