--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -778,41 +778,42 @@
   ],
   "TypeofSchoolOptions": [
     "Elementary School",
-    "Junior High Schools",
-    "High Schools",
-    "Community Colleges",
-    "Technical and Vocational Schools",
-    "Undergraduate Schools",
-    "Graduate Schools",
-    "Professional Schools"
+    "Junior High School",
+    "High School",
+    "Community College",
+    "Technical and Vocational School",
+    "Undergraduate School",
+    "Graduate School",
+    "Professional School"
   ],
   "EntryRecordStatus": [
     "N/A",
     "CROSS BORDER",
-    "B1/B2 VISA",
+    "B1",
+    "B2",
     "VWP",
-    "F1 VISA",
-    "M1 VISA",
-    "H1B VISA",
-    "L1 VISA",
-    "O1 VISA",
-    "J1 VISA",
-    "C VISA",
-    "A VISA",
-    "G VISA",
+    "F1",
+    "M1",
+    "H1B",
+    "L1",
+    "O1",
+    "J1",
+    "C",
+    "A",
+    "G",
     "TPS",
     "REFUGEE",
     "ASYLUM GRANTED",
     "GREEN CARD",
     "ESTA AUTHORIZATION",
-    "K1 VISA",
-    "R1 VISA",
-    "E2 VISA",
-    "E3 VISA",
-    "TN VISA",
-    "P VISA",
-    "Q VISA",
-    "I VISA",
+    "K1",
+    "R1",
+    "E2",
+    "E3",
+    "TN",
+    "P",
+    "Q",
+    "I",
     "ADJUSTMENT OF STATUS",
     "VISA EXTENSION",
     "CHANGE OF STATUS",
